refactor: 딜러가 2장씩 플레이어에게 나누어 주는 메서드 리팩터링