@@ -1,13 +1,21 @@
 package blackjack.domian;
 
-import java.util.HashSet;
-import java.util.List;
+import java.util.Arrays;
+import java.util.Collections;
 import java.util.Set;
 
 public class Player {
-    public Set<Card> cards;
+    private final Set<Card> cards;
+
+    public Player(Set<Card> cards) {
+        this.cards = cards;
+    }
 
     public void send(Card... cards) {
-        this.cards = new HashSet<>(List.of(cards));
+        this.cards.addAll(Arrays.asList(cards));
+    }
+
+    public Set<Card> getCards() {
+        return Collections.unmodifiableSet(cards);
     }
 }
